--- a/01_List_II.ipynb
+++ b/01_List_II.ipynb
@@ -28,12 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "## 2차원 List 선언\n",
-    "\n"
+    "arr = [\n",
+    "    [1,2,3],\n",
+    "    [4,5,6]\n",
+    "]\n"
    ]
   },
   {
@@ -45,12 +48,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "## 2차원 List 초기화 방법\n",
-    "\n"
+    "\n",
+    "arr = [\n",
+    "    [0,0,0],\n",
+    "    [0,0,0],\n",
+    "    [0,0,0]\n",
+    "]\n",
+    "\n",
+    "\n",
+    "arr2 = []\n",
+    "for _ in range(3):\n",
+    "    arr_2.append([0] * 3)\n",
+    "\n",
+    "\n",
+    "arr3 = [[0] * 3 for _ in range(3)]"
    ]
   },
   {
@@ -62,12 +78,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-5f8fd684e606>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m '''\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0marr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 0)"
+     ]
+    }
+   ],
    "source": [
     "## 예시 1\n",
-    "\n"
+    "'''\n",
+    "3 4\n",
+    "0 1 0 0\n",
+    "0 0 0 0\n",
+    "0 0 1 0\n",
+    "'''\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "\n",
+    "arr = []\n",
+    "for _ in range(n):\n",
+    "    arr.append(list(map(int, input().split())))"
    ]
   },
   {
@@ -77,7 +123,9 @@
    "outputs": [],
    "source": [
     "## 예시 2\n",
-    "\n"
+    "n, m = map(int, input().split())\n",
+    "\n",
+    "arr = [list(map(int, input().split())) for _ in range(n)]"
    ]
   },
   {
@@ -99,22 +147,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-a4350c2806d7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m '''\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0marr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 0)"
+     ]
+    }
+   ],
    "source": [
     "## 예시 1\n",
-    "\n"
+    "\n",
+    "'''\n",
+    "3 4\n",
+    "0 1 0 0\n",
+    "0 0 0 0\n",
+    "0 0 1 0\n",
+    "'''\n",
+    "n, m = map(int, input().split())\n",
+    "arr = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    "idx_arr = []\n",
+    "\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        if arr[i][j] == 1:\n",
+    "            idx_arr.append([i, j])\n",
+    "            \n",
+    "# => [[0,1], [2, 2]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "## 예시 2\n",
-    "\n"
+    "\n",
+    "idx_arr = [[i, j] for i in range(n) for j in range(m) if arr[i][j] == 1]"
    ]
   },
   {
@@ -126,32 +211,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 \n",
+      "4 5 6 \n",
+      "7 8 9 \n",
+      "10 11 12 \n"
+     ]
+    }
+   ],
    "source": [
     "## 행 우선 순회\n",
-    "\n"
+    "arr = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9],\n",
+    "    [10,11,12]\n",
+    "]\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "    for j in range(len(arr[i])):\n",
+    "        print(arr[i][j], end = ' ')\n",
+    "    print()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4 7 10 \n",
+      "2 5 8 11 \n",
+      "3 6 9 12 \n"
+     ]
+    }
+   ],
    "source": [
     "## 열 우선 순회\n",
-    "\n"
+    "arr = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9],\n",
+    "    [10, 11, 12]\n",
+    "]\n",
+    "\n",
+    "for j in range(len(arr[0])):\n",
+    "    for i in range(len(arr)):\n",
+    "        print(arr[i][j], end = ' ')\n",
+    "    print()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 \n",
+      "6 5 4 \n",
+      "7 8 9 \n"
+     ]
+    }
+   ],
    "source": [
-    "## 지그재그 순회\n",
-    "\n"
+    "## 지그재그 순회: 홀수번째에 순방향순회/ 짝수번째에 역방향순회\n",
+    "\n",
+    "# i : 행의 좌표, n = len(arr)\n",
+    "# j : 열의 좌표, m = len(arr[i])\n",
+    "\n",
+    "arr = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "    for j in range(len(arr[0])):\n",
+    "        print(arr[i][j + (len(arr[i])-1-2*j) * (i%2)], end=' ')\n",
+    "    print()\n",
+    "        \n",
+    "# i = 0\n",
+    "# j = 순차\n",
+    "# i = 1\n",
+    "# j = 역순"
    ]
   },
   {
@@ -166,12 +320,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 6 8 2 12 \n",
+      "8 7 9 3 13 \n",
+      "9 8 10 4 14 \n",
+      "12 11 13 7 17 \n",
+      "13 12 14 8 18 \n",
+      "14 13 15 9 19 \n",
+      "17 16 18 12 22 \n",
+      "18 17 19 13 23 \n",
+      "19 18 20 14 24 \n"
+     ]
+    }
+   ],
    "source": [
     "# 델타를 이용한 2차원 List 순회\n",
-    "\n"
+    "\n",
+    "arr = [\n",
+    "    [1, 2, 3, 4, 5],\n",
+    "    [6, 7, 8, 9, 10],\n",
+    "    [11, 12, 13, 14, 15],\n",
+    "    [16, 17, 18 ,19, 20],\n",
+    "    [21, 22, 23, 24, 25]\n",
+    "]\n",
+    "\n",
+    "# 좌 우 하 상\n",
+    "dx = [0, 0, -1, 1]\n",
+    "dy = [-1, 1, 0, 0]\n",
+    "\n",
+    "for x in range(1, len(arr) - 1):\n",
+    "    for y in range(1, len(arr[x]) - 1):\n",
+    "        print(arr[x][y], end = ' ')\n",
+    "        for i in range(4):\n",
+    "            tmp_x = x + dx[i]\n",
+    "            tmp_y = y + dy[i]\n",
+    "            print(arr[tmp_x][tmp_y], end = ' ')\n",
+    "        print()\n",
+    "            \n",
+    "# x = 1, y = 1"
    ]
   },
   {
@@ -183,26 +375,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 4, 7], [2, 5, 8], [3, 6, 9]]\n",
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "## 예시 1\n",
-    "\n"
+    "\n",
+    "arr = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "    for j in range(len(arr[i])):\n",
+    "        if i < j:\n",
+    "            arr[i][j], arr[j][i] = arr[j][i], arr[i][j]\n",
+    "\n",
+    "print(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 4, 7], [2, 5, 8], [3, 6, 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "## 예시 2\n",
-    "\n"
+    "\n",
+    "arr = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "\n",
+    "arr = list(map(list, zip(*arr)))\n",
+    "print(arr)\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -213,11 +441,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "240\n"
+     ]
+    }
+   ],
    "source": [
     "## 연습문제 1\n",
+    "\n",
+    "matrix = [[k * 5 + i for i in range(1, 6)] for k in range(5)]\n",
+    "\n",
+    "# 상 하 좌 우\n",
+    "dx = [0, 0, -1, 1]\n",
+    "dy = [1, -1, 0, 0]\n",
+    "\n",
+    "plus = []\n",
+    "\n",
+    "for x in range(len(matrix)):\n",
+    "    for y in range(len(matrix[x])):\n",
+    "        for i in range(4):\n",
+    "            if x + dx[i] >= 0 and x + dx[i] < len(matrix) and y + dy[i] >= 0 and y + dy[i] < len(matrix):\n",
+    "                plus.append(abs(matrix[x + dx[i]][y + dy[i]] - matrix[x][y]))\n",
+    "\n",
+    "print(sum(plus))\n",
     "\n"
    ]
   },
@@ -381,11 +633,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "## 셀렉션 알고리즘\n",
+    "\n",
+    "def select(arr, k):\n",
+    "    for i in range(k):   # i번째라고 가정\n",
+    "        min_idx = i\n",
+    "        for j in range(i + 1, len(arr)):\n",
+    "            if arr[min_idx] > arr[j]:\n",
+    "                min_idx = j\n",
+    "        arr[i], arr[min_idx] = arr[min_idx], arr[i]\n",
+    "        \n",
+    "    return arr[k - 1]\n",
+    "        \n",
     "\n"
    ]
   },
@@ -414,16 +677,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 29, 33, 50, 50]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### 선택 정렬(Selection Sort)\n",
-    "\n"
+    "\n",
+    "def selection_sort(arr):\n",
+    "    for i in range(len(arr)):\n",
+    "        min_idx = i\n",
+    "        for j in range(i + 1, len(arr)):\n",
+    "            if arr[min_idx] > arr[j]:\n",
+    "                min_idx = j\n",
+    "        arr[i], arr[min_idx] = arr[min_idx], arr[i]\n",
+    "    return arr\n",
+    "    \n",
+    "    \n",
+    "selection_sort([29, 1, 50, 33, 2, 50])\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -459,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
